--- a/.github/actions/cached-deps/action.yaml
+++ b/.github/actions/cached-deps/action.yaml
@@ -5,17 +5,23 @@ name: 'Get & Cache Dependencies'
 # We don't specify an on key, because they are not workflows
 # They are part of workflows
 description: 'Get the dependencies (via npm) and cache them'
+inputs:
+    caching:
+        description: 'Whether to cache dependencies or not'
+        required: false 
+        default: 'true'
 runs: 
     using: 'composite' # MUST be composite
     steps: 
         - name: Cache dependencies
+          if: inputs.caching == 'true'
           id: cache
           uses: actions/cache@v3
           with:
             path: node_modules
             key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
         - name: Install dependencies
-          if: steps.cache.outputs.cache-hit != 'true'
+          if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != true
           run: npm ci
           shell: bash # must specify this when creating custom composite action
           # and using the run key
