--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -11,6 +11,8 @@ jobs:
         uses: actions/checkout@v3
       - name: Load and Cache Dependencies
         uses: ./.github/actions/cached-deps # you don't have to point at actions.yaml - automatic
+        with:
+            caching: 'false'
       - name: Lint code
         run: npm run lint
   test:
