--- a/.github/actions/cached-deps/action.yaml
+++ b/.github/actions/cached-deps/action.yaml
@@ -21,7 +21,10 @@ runs:
             path: node_modules
             key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
         - name: Install dependencies
-          if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != true
-          run: npm ci
+          if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
+          run: |
+            echo "${{steps.cache.outputs.cache-hit}}"
+            echo "${{inputs.caching}}"
+            npm ci
           shell: bash # must specify this when creating custom composite action
           # and using the run key
