--- a/.github/actions/cached-deps/action.yaml
+++ b/.github/actions/cached-deps/action.yaml
@@ -10,6 +10,10 @@ inputs:
         description: 'Whether to cache dependencies or not'
         required: false 
         default: 'true'
+outputs:
+    used-cache:
+        description: 'Whether cache was used'
+        value: ${{ steps.install.outputs.cache}}
 runs: 
     using: 'composite' # MUST be composite
     steps: 
@@ -21,10 +25,10 @@ runs:
             path: node_modules
             key: deps-node-modules-${{ hashFiles('**/package-lock.json') }}
         - name: Install dependencies
+          id: install
           if: steps.cache.outputs.cache-hit != 'true' || inputs.caching != 'true'
           run: |
-            echo "${{steps.cache.outputs.cache-hit}}"
-            echo "${{inputs.caching}}"
+            echo "cache='${{inputs.caching}}'" >> $GITHUB_OUTPUT
             npm ci
           shell: bash # must specify this when creating custom composite action
           # and using the run key
