--- a/.github/actions/deploy-s3-javascript/action.yaml
+++ b/.github/actions/deploy-s3-javascript/action.yaml
@@ -2,4 +2,4 @@ name: 'Deploy to AWS S3'
 description: 'Deploy a static website via AWS S3'
 runs: 
   using: 'node16'
-  main: 'main.js'
+  main: 'main.js' #github actions will execute main.js file
