--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -68,6 +68,4 @@ jobs:
     runs-on: ubunto-latest
     steps:
       - name: Get code
-        uses: actions/checkout@v3
-      - name: Run custom action
-        uses: ./.github/actions/deploy-s3-javascript
+        run: echo "hello"
