--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,11 +4,6 @@ on:
     branches:
       - main
 jobs:
-  info:
-    runs-on: ubunto-latest
-    steps:
-      - name: hi
-        run: echo "hello"
   lint:
     runs-on: ubuntu-latest
     steps:
@@ -69,4 +64,10 @@ jobs:
         run: ls
       - name: Deploy site
         run: echo "Deploying..."
-
+  information:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Get code
+        uses: actions/checkout@v3
+      - name: Run custom action
+        uses: ./.github/actions/deploy-s3-javascript
