--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,6 +63,7 @@ jobs:
       - name: Output contents
         run: ls
       - name: Deploy site
+        id: deploy
         uses: ./github/actions/deploy-s3-javascript
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
@@ -70,4 +71,7 @@ jobs:
         with: # remember we must provide input, see the action file, it has required inputs
           bucket: gha-custom-action-hosting
           dist-folder: ./dist
+      - name: Output Information
+        run: |
+          echo "LIVE URL: ${{ steps.deploy.outputs.website-url }}"
           
