--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -62,9 +62,9 @@ jobs:
           path: ./dist
       - name: Output contents
         run: ls
-      # - name: Deploy site
-      #   id: deploy
-      #   uses: ./github/actions/deploy-s3-javascript
+      - name: Deploy site
+        id: deploy
+        uses: ./github/actions/deploy-s3-javascript
       #   env:
       #     AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID}}
       #     SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
